[package]
name = "precord"
version = "0.4.0"
edition = "2021"
authors = ["Xiaopeng Li <x.friday@outlook.com>"]
description = "A command line tool to record process or system performance data"
homepage = "https://github.com/xiaopengli89/precord"
repository = "https://github.com/xiaopengli89/precord"
keywords = ["performance"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["precord-core"]

[dependencies]
plotters = "0.3"
bitflags = "1.3.2"
csv = "1.1.6"
serde = "1.0.130"
serde_json = "1.0.72"
sysinfo = "0.21.1"
regex = "1.5.4"

[dependencies.clap]
version = "3.0.0-rc.3"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.precord-core]
version = "0.3.9"
path = "precord-core"
