[package]
name = "precord"
version = "0.6.3"
edition = "2021"
authors = ["Xiaopeng Li <x.friday@outlook.com>"]
description = "Command line tool for recording process or system performance data"
homepage = "https://github.com/xiaopengli89/precord"
repository = "https://github.com/xiaopengli89/precord"
keywords = ["performance"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["precord-core"]

[dependencies]
plotters = "0.3"
bitflags = "1.3.2"
csv = "1.1.6"
serde = "1.0.130"
serde_json = "1.0.72"
sysinfo = "0.26.2"
regex = "1.5.4"
crossterm = "0.25.0"
humantime = "2.1.0"

[dependencies.clap]
version = "4.0.12"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.precord-core]
version = "0.6.3"
path = "precord-core"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
]
