[package]
name = "precord"
version = "0.7.12"
edition = "2021"
authors = ["Xiaopeng Li <x.friday@outlook.com>"]
description = "Command line tool for recording process or system performance data"
homepage = "https://github.com/xiaopengli89/precord"
repository = "https://github.com/xiaopengli89/precord"
keywords = ["performance"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["precord-core"]

[workspace.dependencies]
bitflags = "1.3.2"
sysinfo = "0.26.9"
windows = "0.44.0"
serde = "1.0.152"

[dependencies]
plotters = "0.3"
bitflags.workspace = true
csv = "1.1.6"
serde.workspace = true
serde_json = "1.0.72"
serde_with = "2.1.0"
sysinfo.workspace = true
regex = "1.5.4"
crossterm = "0.25.0"
humantime = "2.1.0"
signal-hook = "0.3.17"

[dependencies.clap]
version = "4.1.1"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.precord-core]
version = "0.7.11"
path = "precord-core"
features = ["dtrace"]

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
]

[profile.release]
panic = "abort"
lto = true
strip = true