[package]
name = "precord-core"
version = "0.6.7"
edition = "2021"
authors = ["Xiaopeng Li <x.friday@outlook.com>"]
description = "Library for retrieving process or system performance data"
homepage = "https://github.com/xiaopengli89/precord"
repository = "https://github.com/xiaopengli89/precord"
keywords = ["performance"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
bitflags = "1.3.2"
sysinfo = "0.26.2"

[dependencies.serde]
version = "1.0.127"
features = ["serde_derive"]

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.2.1"
core-foundation = "0.9.2"
IOKit-sys = "0.1.5"
smc = "0.2.2"
libc = "0.2.112"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.11.0"
ferrisetw = "0.1.1"
ntapi = "0.4.0"
regex = "1.6.0"
rand = "0.8.5"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Performance",
]
