[package]
name = "precord-core"
version = "0.7.2"
edition = "2021"
authors = ["Xiaopeng Li <x.friday@outlook.com>"]
description = "Library for retrieving process or system performance data"
homepage = "https://github.com/xiaopengli89/precord"
repository = "https://github.com/xiaopengli89/precord"
keywords = ["performance"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
bitflags.workspace = true
sysinfo.workspace = true

[dependencies.serde]
workspace = true
features = ["serde_derive"]

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.2.1"
core-foundation = "0.9.2"
IOKit-sys = "0.1.5"
smc = { version = "0.2.4" }
libc = "0.2.112"
mach2 = "0.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.11.0"
ferrisetw = "1.0.0"
ntapi = "0.4.0"
regex = "1.6.0"
rand = "0.8.5"
libloading = "0.7.4"

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Power",
]
