[package]
name = "precord-core"
version = "0.7.14-20250423"
edition = "2021"
authors = ["Xiaopeng Li <x.friday@outlook.com>"]
description = "Library for retrieving process or system performance data"
homepage = "https://github.com/xiaopengli89/precord"
repository = "https://github.com/xiaopengli89/precord"
keywords = ["performance"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dtrace = ["dep:dtrace"]

[dependencies]
thiserror = "1.0.61"
bitflags.workspace = true
sysinfo.workspace = true

[dependencies.serde]
workspace = true
features = ["serde_derive"]

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7.0"
core-foundation = "0.9.2"
IOKit-sys = "0.1.5"
smc = { version = "0.2.4" }
libc = "0.2.112"
mach2 = "0.4.1"
dtrace = { version = "0.1.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13.3"
ferrisetw = "1.2.0"
ntapi = "0.4.0"
regex = "1.10.5"
rand = "0.8.5"
libloading = "0.8.4"

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Power",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]
